@@ -19,6 +19,10 @@ Broker:
 Client library:
 - Fix topic matching edge case.
 
+General:
+- Use $(STRIP) for stripping binaries when installing, to allow easier cross
+  compilation.
+
 1.3.1 - 20140324
 ================
 
